# integrations-scw

./: .gitignore  README.md  config.json  contrast_api.py  contrast_scw.py  pyproject.toml
contrast_api/: api_handlers.py  contrast_api.py  integration_secure_code_warrior.py  integration_secure_flag.py  integrations_helper.py  models.py  request_handler.py
integrations_cli/: __init__.py  _docstring_help_text_fix.py  auth.py  main.py  secure_code_warrior.py  secure_flag.py
