[tool.poetry]
name = "contrast-integrations-cli"
version = "2.0.0"
description = "A Python CLI tool for adding training integrations to Contrast vulnerability recommendations."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "contrast_api"}, {include = "integrations_cli"}]

[tool.poetry.scripts]
contrast-integrations = "integrations_cli.main:app"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
typer = {extras = ["all"], version = "^0.9.0"}
pyyaml = "^6.0.1"
jinja2 = "^3.1.2"
pybars3 = "^0.9.7"

[tool.poetry.group.dev.dependencies]
requests-cache = "^1.1.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
